Fixed jQuery UI sortable. Added Zee-Way Analytics tracking to default zee-way link.

--- a/tabPageFiles/bg.html
+++ b/tabPageFiles/bg.html
@@ -28,11 +28,11 @@ var defaultData = {
 	"info": {
 		"name": "Bad Ass New Tab Page",
 		"description": "A Google Chrome extension for people tired of Chrome's ugly, useless tab page.",
-		"version": "0.2.0",
-		"homepage": "http://www.refreshedweb.com/projects/newtab/",
+		"version": "0.4.0",
+		"homepage": "http://www.piercemoore.com/projects/bantp/",
 		"github": "http://www.github.com/piercemoore/bantp/",
 		"devName": "Pierce Moore",
-		"devEmail": "Pierce@RefreshedWeb.com"
+		"devEmail": "Pierce@PierceMoore.com"
 	},
 	"prefs": {
 		"developerMode": true
@@ -150,7 +150,7 @@ var defaultData = {
 			},
 			18: {
 				"id"  : 18,
-				"href": "http://www.zee-way.com",
+				"href": "http://www.zee-way.com?utm_source=BANTP&utm_medium=DefaultLink&utm_campaign=v040",
 				"name": "Zee-Way Hosting",
 				"order" : 19
 			}
