--- a/tabPageFiles/index.html
+++ b/tabPageFiles/index.html
@@ -3,6 +3,7 @@
 		<title>Start Here : Bad Ass New Tab Page</title>
 		<link rel="stylesheet" type="text/css" href="lib/css/style.css" />
 		<script src="lib/js/jquery-1.7.1.min.js" type="text/javascript"></script>
+		<script src="lib/js/jquery-ui-1.8.18.custom.min.js" type="text/javascript"></script>
 		<script type="text/javascript">
 
 		const bg = chrome.extension.getBackgroundPage();
