Fixed options link in home page

--- a/tabPageFiles/index.html
+++ b/tabPageFiles/index.html
@@ -177,7 +177,7 @@
 			
 			$("#menuBar_optionsPage").click(function() {
 				chrome.tabs.create({
-					url:	"tabPageFiles/update.html"
+					url:	"tabPageFiles/options.html"
 				})
 			});
 			
