--- a/tabPageFiles/options.html
+++ b/tabPageFiles/options.html
@@ -193,7 +193,7 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 
 			<h3> Shameless Self Promotion </h3>
 			<span style="font-size: 40px; letter-spacing: -2px;">My hosting company, Zee-Way hosting. If you want great hosting at a low, flat rate, use coupon code BANTP to get 20% off shared and vps hosting for life!</span>
-			<a href="http://www.zee-way.com"><img src="lib/img/zw_logo.png" alt="Zee-Way Hosting" title="Zee-Way Hosting" /></a>
+			<a href="http://www.zee-way.com?utm_source=BANTP&utm_medium=DefaultLink&utm_campaign=v040"><img src="lib/img/zw_logo.png" alt="Zee-Way Hosting" title="Zee-Way Hosting" /></a>
 
 		</div>
 		
