--- a/tabPageFiles/update.html
+++ b/tabPageFiles/update.html
@@ -106,18 +106,12 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 		<div class="genBox">
 			<h2 style="color:#ffffff;"><img src="../img/icon_128.png" class="shadow" style="width: 80px; height: 80px;" align="left" /> Bad Ass New Tab Page :: Update</h2>
 			<br />
-			<h2>What up, y'all?</h2>
-			<span style="font-size: 30px; font-family: Vegur;">
-				Update time!
-			</span>
 
-			<h2>What I Changed!</h2>
+			<h2>Whoopsie Daisy :-/</h2>
 			<span style="font-size: 30px; font-family: Vegur;">
-				Another huge update, and corresponding changelist.
-				<ol>
-					<li>OPTIONS PANEL!! YAY! I say yay, anyway. I hope you will too. You can now configure your options in the "Options" panel found in the home page next to the "Edit links" button.</li>
-					<li>You can change your background, the color scheme for the buttons, and even the way that the clock is displayed. All in all, pretty fully customizable.</li>
-				</ol>
+				So... It turns out Google changed a few things and it broke BANTP. No worries though. If you're seeing this message, the problem has already been resolved.
+				
+				I'm sorry that I didn't see this sooner. 
 			</span>
 			<h2>How to contact me / Support</h2>
 			<span style="font-size: 30px; font-family: Vegur;">
