--- a/background.html
+++ b/background.html
@@ -4,24 +4,16 @@
 		<title>Bad Ass New Tab Page</title>
 
 		<!-- Now let's bring in all the awesomeness -->
-		<script type="text/javascript" src="js/zepto.min.js"></script>
+		<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
 		<script type="text/javascript" src="js/underscore-min.js"></script>
 		<script type="text/javascript" src="js/backbone-min.js"></script>
 		<script type="text/javascript" src="js/handlebars.js"></script>
 		<script type="text/javascript" src="js/less-1.3.3.min.js"></script>
-		<script type="text/javascript" src="js/foundation.min.js"></script>
-		<script type="text/javascript" src="js/app.js"></script>
-
-		<!-- Now let's load our plugins 
-		<link rel="stylesheet" href="lib/toolbar/jquery.toolbars.css" />
-		<link rel="stylesheet" href="lib/toolbar/bootstrap.icons.css" />
-		<script type="text/javascript" src="lib/toolbar/jquery.toolbar.min.js"></script>-->
-
-		<link rel="shortcut icon" href="img/favicon.ico" />
+		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	</head>
 	<body>
 
-		
+
 
 	</body>
 </html>
