--- a/index.html
+++ b/index.html
@@ -32,17 +32,39 @@
 
 <div class="container-fluid">
 	<div class="row-fluid">
-		<div class="span3">
+		<div class="span2">
 			<h1 class="logo">BANTP</h1>
 		</div>
-		<div class="span9">
-			<button>Button Text that is way, way longer and should make the button bigger!</button>
+		<div class="span10">
 		</div>
 	</div>
 
 	<div class="row-fluid">
-		<div class="span4">Sidebar!</div>
-		<div class="span8">Main content!</div>
+		<div class="span4">
+			<a href="#" class="addModule">lkasfhkl</a>
+
+		</div>
+		<div class="span8">
+
+			<button>Facebook</button>
+			<button>Facebook</button>
+			<button>Facebook</button>
+			<button>Facebook</button>
+			<button>Facebook</button>
+			<button>Facebook</button>
+			<button>Facebook</button>
+			<button>Facebook</button>
+			<button>Facebook</button>
+			<button>Facebook</button>
+			<button>Facebook</button>
+			<button>Facebook</button>
+			<button>Facebook</button>
+			<button>Facebook</button>
+			<button>Facebook</button>
+			<button>Facebook</button>
+			<button>Facebook</button>
+
+		</div>
 	</div>
 </div>
 
