--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="css/fonts/verb/stylesheet.css" />
 		<link rel="stylesheet" type="text/css" href="css/fonts/novecento/stylesheet.css" />
 		<link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css" />
+		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
 		<link rel="stylesheet/less" type="text/css" href="css/bantp.less" />
 
 		<!-- Now let's bring in all the awesomeness -->
@@ -32,37 +33,21 @@
 
 <div class="container-fluid">
 	<div class="row-fluid">
-		<div class="span2">
-			<h1 class="logo">BANTP</h1>
-		</div>
-		<div class="span10">
-		</div>
-	</div>
-
-	<div class="row-fluid">
 		<div class="span4">
-			<a href="#" class="addModule">lkasfhkl</a>
+
+			<div class="row-fluid">
+				<h1 class="logo">BANTP</h1>
+			</div>
+
+			<div class="row-fluid">
+				<br />
+				<a href="#" class="placer_addModule">ADD MODULE <i class="icon-white icon-plus"></i></a>
+			</div>
 
 		</div>
 		<div class="span8">
 
-			<button>Facebook</button>
-			<button>Facebook</button>
-			<button>Facebook</button>
-			<button>Facebook</button>
-			<button>Facebook</button>
-			<button>Facebook</button>
-			<button>Facebook</button>
-			<button>Facebook</button>
-			<button>Facebook</button>
-			<button>Facebook</button>
-			<button>Facebook</button>
-			<button>Facebook</button>
-			<button>Facebook</button>
-			<button>Facebook</button>
-			<button>Facebook</button>
-			<button>Facebook</button>
-			<button>Facebook</button>
+			<button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button>
 
 		</div>
 	</div>
