Created module styles, fixed bugs

--- a/index.html
+++ b/index.html
@@ -32,23 +32,33 @@
 	<body>
 
 <div class="container-fluid">
+
 	<div class="row-fluid">
 		<div class="span4">
+			<h1 class="logo">BANTP</h1>
+		</div>
 
-			<div class="row-fluid">
-				<h1 class="logo">BANTP</h1>
-			</div>
-
-			<div class="row-fluid">
-				<br />
-				<a href="#" class="placer_addModule">ADD MODULE <i class="icon-white icon-plus"></i></a>
-			</div>
+		<div class="span8">
 
 		</div>
+	</div>
+
+	<div class="row-fluid">
+		<div class="span4">
+			<br />
+			<a href="#" class="placer_addModule">ADD MODULE <i class="icon-plus"></i></a><br /><br />
+			<hr />
+
+			<div class="module"><h2>Module Name</h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis lobortis interdum gravida. Pellentesque vitae orci scelerisque libero rutrum interdum sit amet pellentesque purus. Curabitur posuere, ipsum id rhoncus scelerisque, sem diam cursus est, in fermentum ante tortor at nisl. Praesent elementum, neque id mattis blandit, tellus purus bibendum libero, nec interdum justo diam eu odio. Nunc quis varius urna. Nam vulputate malesuada risus vel faucibus. Pellentesque consectetur pharetra dolor, ac consectetur erat faucibus eu. Ut sit amet leo nulla, eu pretium enim.</div>
+		</div>
+
 		<div class="span8">
 
 			<button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button>
 
+			<hr />
+
+			<div class="module"><h2>Module Name</h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis lobortis interdum gravida. Pellentesque vitae orci scelerisque libero rutrum interdum sit amet pellentesque purus. Curabitur posuere, ipsum id rhoncus scelerisque, sem diam cursus est, in fermentum ante tortor at nisl. Praesent elementum, neque id mattis blandit, tellus purus bibendum libero, nec interdum justo diam eu odio. Nunc quis varius urna. Nam vulputate malesuada risus vel faucibus. Pellentesque consectetur pharetra dolor, ac consectetur erat faucibus eu. Ut sit amet leo nulla, eu pretium enim.</div>
 		</div>
 	</div>
 </div>
