Added dummy placeholder images in modules

--- a/index.html
+++ b/index.html
@@ -49,7 +49,12 @@
 			<a href="#" class="placer_addModule">ADD MODULE <i class="icon-plus"></i></a><br /><br />
 			<hr />
 
-			<div class="module"><h2>Module Name</h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis lobortis interdum gravida. Pellentesque vitae orci scelerisque libero rutrum interdum sit amet pellentesque purus. Curabitur posuere, ipsum id rhoncus scelerisque, sem diam cursus est, in fermentum ante tortor at nisl. Praesent elementum, neque id mattis blandit, tellus purus bibendum libero, nec interdum justo diam eu odio. Nunc quis varius urna. Nam vulputate malesuada risus vel faucibus. Pellentesque consectetur pharetra dolor, ac consectetur erat faucibus eu. Ut sit amet leo nulla, eu pretium enim.</div>
+			<div class="module">
+				<h2>Module Name</h2>
+				<a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a>
+
+				<div class="clearfix"></diV>
+			</div>
 		</div>
 
 		<div class="span8">
@@ -58,7 +63,21 @@
 
 			<hr />
 
-			<div class="module"><h2>Module Name</h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis lobortis interdum gravida. Pellentesque vitae orci scelerisque libero rutrum interdum sit amet pellentesque purus. Curabitur posuere, ipsum id rhoncus scelerisque, sem diam cursus est, in fermentum ante tortor at nisl. Praesent elementum, neque id mattis blandit, tellus purus bibendum libero, nec interdum justo diam eu odio. Nunc quis varius urna. Nam vulputate malesuada risus vel faucibus. Pellentesque consectetur pharetra dolor, ac consectetur erat faucibus eu. Ut sit amet leo nulla, eu pretium enim.</div>
+			<div class="module">
+				<h2>Module Name</h2>
+				<a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a>
+
+				<div class="clearfix"></diV>
+			</div>
+
+			<hr />
+
+			<div class="module">
+				<h2>Module Name</h2>
+				<a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a><a href="#" class="app_icon"><img src="http://placehold.it/60x60" /></a>
+
+				<div class="clearfix"></diV>
+			</div>
 		</div>
 	</div>
 </div>
