Created admin buttons

--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
 		</div>
 
 		<div class="span8">
-
+			<a href="#" class="admin_button">OPTIONS</a>
+			<a href="#" class="admin_button">OPTIONS</a>
+			<a href="#" class="admin_button">OPTIONS</a>
+			<a href="#" class="admin_button">OPTIONS</a>
+			<a href="#" class="admin_button">OPTIONS</a>
 		</div>
 	</div>
 
