--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
 		<title>Bad Ass New Tab Page</title>
 
 		<!-- Now let's bring in all the awesomeness -->
-		<link rel="stylesheet" type="text/css" href="css/fonts/nexa/stylesheet.css" />
-		<link rel="stylesheet" type="text/css" href="css/fonts/verb/stylesheet.css" />
-		<link rel="stylesheet" type="text/css" href="css/fonts/novecento/stylesheet.css" />
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800|Archivo+Black|Cantarell:700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet/less" type="text/css" href="css/bantp.less" />
 
 		<!-- Now let's bring in all the awesomeness -->
@@ -25,10 +22,6 @@
 		<script type="text/javascript">less = { env: 'development' };</script>
 		<script type="text/javascript" src="js/less-1.3.3.min.js"></script>
 
-		<!-- Now let's load our plugins
-		<link rel="stylesheet" href="lib/toolbar/jquery.toolbars.css" />
-		<script type="text/javascript" src="lib/toolbar/jquery.toolbar.min.js"></script> -->
-
 		<link rel="shortcut icon" href="img/favicon.ico" />
 	</head>
 	<body>
@@ -36,28 +29,59 @@
 <div class="container-fluid">
 
 	<div class="row-fluid">
-		<div class="span4">
-			<h1 class="logo">BANTP</h1>
+		<div class="span1 sidebar">
+
+			<img src="img/icon_48.png" alt="Bad Ass New Tab Page" title="Bad Ass New Tab Page" />
+
+			<!-- <a href="#" class="placer_addModule">ADD MODULE <i class="icon-plus"></i></a><br /><br /> -->
+
+			<br /><br />
+
+			<a href="#"><i class="icon-dashboard"></i></a>
+			<a href="#"><i class="icon-plus-sign-alt"></i></a>
+			<a href="#"><i class="icon-bookmark-empty"></i></a>
+			<a href="#"><i class="icon-desktop"></i></a>
+			<a href="#"><i class="icon-check"></i></a>
+			<a href="#"><i class="icon-cogs"></i></a>
+
 		</div>
 
-		<div class="span8">
-			<a href="#" class="admin_button"><i class="icon-cogs"></i> SETTINGS</a>
-			<a href="#" class="admin_button">OPTIONS</a>
-			<a href="#" class="admin_button">OPTIONS</a>
-			<a href="#" class="admin_button">OPTIONS</a>
-			<a href="#" class="admin_button">OPTIONS</a>
-		</div>
-	</div>
+		<div class="span11 workspace">
 
-	<div class="row-fluid">
-		<div class="span4">
-			<br />
-			<a href="#" class="placer_addModule">ADD MODULE <i class="icon-plus"></i></a><br /><br />
-			<hr />
+			<h2>LINK COLLECTIONS</h2>
 
 			<div class="module">
-				<h2>Module Name</h2>
-				<a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a>
+				<p>FAVORITES</p>
+
+				<div class="links">
+					<a href="#" class="btn btn-large">GOOGLE</a>	
+					<a href="#" class="btn btn-large">GOOGLE</a>	
+					<a href="#" class="btn btn-large">GOOGLE</a>
+				</div>
+
+				<div class="clearfix"></diV>
+			</div>
+
+			<div class="module">
+				<p>TOP SITES</p>
+
+				<div class="links">
+					<a href="#" class="btn btn-large">GOOGLE</a>	
+					<a href="#" class="btn btn-large">GOOGLE</a>	
+					<a href="#" class="btn btn-large">GOOGLE</a>
+				</div>
+
+				<div class="clearfix"></diV>
+			</div>
+
+			<div class="module">
+				<p>WEB DEVELOPMENT</p>
+
+				<div class="links">
+					<a href="#" class="btn btn-large">GOOGLE</a>	
+					<a href="#" class="btn btn-large">GOOGLE</a>	
+					<a href="#" class="btn btn-large">GOOGLE</a>
+				</div>
 
 				<div class="clearfix"></diV>
 			</div>
@@ -65,31 +89,7 @@
 			<hr />
 
 			<div class="module">
-				<h2>Button Testing</h2>
-
-					<a href="#" class="btn">PierceMoore.com</a>	
-
-				<div class="clearfix"></diV>
-			</div>
-		</div>
-
-		<div class="span8">
-
-			<button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button><button><img src="http://cdn.shopify.com/s/files/1/0072/4672/t/1/assets/icon-facebook-small.png" width="24" height="24" align="left" /> Facebook</button>
-
-			<hr />
-
-			<div class="module">
-				<h2>Module Name</h2>
-				<a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a>
-
-				<div class="clearfix"></diV>
-			</div>
-
-			<hr />
-
-			<div class="module">
-				<h2>Module Name</h2>
+				<h3>Module Name</h3>
 				<a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a>
 
 				<div class="clearfix"></diV>
