--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
 		<script type="text/javascript" src="js/less-1.3.3.min.js"></script>
 
 		<link rel="shortcut icon" href="img/favicon.ico" />
+<script type="text/javascript">
+$(function() {
+	$(".sidebar a").popover({
+		placement : "right",
+		trigger : "hover"
+	});
+});
+</script>
 	</head>
 	<body>
 
@@ -33,20 +41,24 @@
 
 			<img src="img/icon_48.png" alt="Bad Ass New Tab Page" title="Bad Ass New Tab Page" />
 
-			<!-- <a href="#" class="placer_addModule">ADD MODULE <i class="icon-plus"></i></a><br /><br /> -->
-
 			<br /><br />
 
-			<a href="#"><i class="icon-dashboard"></i></a>
-			<a href="#"><i class="icon-plus-sign-alt"></i></a>
-			<a href="#"><i class="icon-bookmark-empty"></i></a>
-			<a href="#"><i class="icon-desktop"></i></a>
-			<a href="#"><i class="icon-check"></i></a>
-			<a href="#"><i class="icon-cogs"></i></a>
+			<a href="#" class="sidebar_link" data-title="Dashboard" data-content="View all your modules, applications, and bookmarks in the same place."><i class="icon-dashboard"></i></a>
+			<a href="#" class="sidebar_link" data-title="Module Management" data-content="Add, configure, and remove BANTP modules."><i class="icon-plus-sign-alt"></i></a>
+			<a href="#" class="sidebar_link" data-title="Bookmarks" data-content="View and manage all your collected bookmarks."><i class="icon-bookmark-empty"></i></a>
+			<a href="#" class="sidebar_link" data-title="Application Management" data-content="Manage your installed Google Chrome Applications and Extensions"><i class="icon-desktop"></i></a>
+			<a href="#" class="sidebar_link" data-title="To-Do List" data-content="A simple, configurable to-do list that stays out of your way."><i class="icon-check"></i></a>
+			<a href="#" class="sidebar_link" data-title="BANTP Settings" data-content="Manage and configure all your BANTP settings."><i class="icon-cogs"></i></a>
 
 		</div>
 
 		<div class="span11 workspace">
+			<h2>QUICK LAUNCH</h2>
+			<div class="module">
+				<a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a>
+
+				<div class="clearfix"></div>
+			</div>
 
 			<h2>LINK COLLECTIONS</h2>
 
@@ -88,12 +100,6 @@
 
 			<hr />
 
-			<div class="module">
-				<h3>Module Name</h3>
-				<a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a>
-
-				<div class="clearfix"></diV>
-			</div>
 		</div>
 	</div>
 </div>
