--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@ $(function() {
 	var Dashboard = loader.module('dashboard');
 
 	// Build the interface!
-	var Workspace = new BANTP.Workspace();
-	Workspace.render();
+	var Application = new BANTP.Workspace();
+	Application.render();
 
 	var modules = {
 		"Module One" : {
