Created separators for modules, added metadata for dynamic handling

--- a/index.html
+++ b/index.html
@@ -54,12 +54,17 @@ $(function() {
 
 			<br /><br />
 
-			<a href="#" class="sidebar_link" data-title="Dashboard" data-content="View all your modules, applications, and bookmarks in the same place."><i class="icon-dashboard"></i></a>
-			<a href="#" class="sidebar_link" data-title="Module Management" data-content="Add, configure, and remove BANTP modules."><i class="icon-plus-sign-alt"></i></a>
-			<a href="#" class="sidebar_link" data-title="Bookmarks" data-content="View and manage all your collected bookmarks."><i class="icon-bookmark-empty"></i></a>
-			<a href="#" class="sidebar_link" data-title="Application Management" data-content="Manage your installed Google Chrome Applications and Extensions"><i class="icon-desktop"></i></a>
-			<a href="#" class="sidebar_link" data-title="To-Do List" data-content="A simple, configurable to-do list that stays out of your way."><i class="icon-check"></i></a>
-			<a href="#" class="sidebar_link" data-title="BANTP Settings" data-content="Manage and configure all your BANTP settings."><i class="icon-cogs"></i></a>
+			<p>MODULES</p>
+
+			<a href="#" data-module="dashboard" data-title="Dashboard" data-content="View all your modules, applications, and bookmarks in the same place."><i class="icon-dashboard"></i></a>
+			<a href="#" data-module="modules" data-title="Module Management" data-content="Add, configure, and remove BANTP modules."><i class="icon-plus-sign-alt"></i></a>
+			<a href="#" data-module="bookmarks" data-title="Bookmarks" data-content="View and manage all your collected bookmarks."><i class="icon-bookmark-empty"></i></a>
+			<a href="#" data-module="settings" data-title="BANTP Settings" data-content="Manage and configure all your BANTP settings."><i class="icon-cogs"></i></a>
+
+			<p>APPS</p>
+
+			<a href="#" data-module="app_manager" data-title="Application Manager" data-content="Manage your installed Google Chrome Applications and Extensions"><i class="icon-desktop"></i></a>
+			<a href="#" data-module="todo" data-title="To-Do List" data-content="A simple, configurable to-do list that stays out of your way."><i class="icon-check"></i></a>
 
 		</div>
 
