Began Dashboard template, renders properly

--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@ $(function() {
 </script>
 	</head>
 	<body>
+		
+<script type="text/x-handlebars-template" id="hb_dashboard_workspace">
+<div id="dashboard_workspace">
+	<h2>BANTP Dashboard</h2>
+</div>
+</script>
 
 <div class="container-fluid">
 
