Added new templates for all modules

--- a/index.html
+++ b/index.html
@@ -44,10 +44,40 @@ $(function() {
 </script>
 	</head>
 	<body>
-		
+
 <script type="text/x-handlebars-template" id="hb_dashboard_workspace">
 <div id="dashboard_workspace">
-	<h2>BANTP Dashboard</h2>
+	<h2>DASHBOARD</h2>
+</div>
+</script>
+		
+<script type="text/x-handlebars-template" id="hb_modules_workspace">
+<div id="modules_workspace">
+	<h2>MODULE MANAGEMENT</h2>
+</div>
+</script>
+		
+<script type="text/x-handlebars-template" id="hb_bookmarks_workspace">
+<div id="bookmarks_workspace">
+	<h2>BOOKMARK MANAGEMENT</h2>
+</div>
+</script>
+		
+<script type="text/x-handlebars-template" id="hb_settings_workspace">
+<div id="settings_workspace">
+	<h2>BANTP SETTINGS</h2>
+</div>
+</script>
+		
+<script type="text/x-handlebars-template" id="hb_appmanager_workspace">
+<div id="appmanager_workspace">
+	<h2>APPLICATION MANAGEMENT</h2>
+</div>
+</script>
+		
+<script type="text/x-handlebars-template" id="hb_todo_workspace">
+<div id="todo_workspace">
+	<h2>TO-DO LIST APPLICATION</h2>
 </div>
 </script>
 
@@ -76,8 +106,8 @@ $(function() {
 
 		<div class="span11 workspace">
 			<div id="quick_launch">
-				<h2>QUICK LAUNCH</h2>
 				<div class="module">
+				<p>QUICK LAUNCH</p>
 					<a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a><a href="#" class="app_icon"><img src="http://placekitten.com/70/70" /></a>
 
 					<div class="clearfix"></div>
