--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 		<title>Bad Ass New Tab Page</title>
 
 		<!-- Now let's bring in all the awesomeness -->
-		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-		<link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css" />
-		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
+		<link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.min.css" />
+		<link rel="stylesheet" type="text/css" href="stylesheets/bootstrap-responsive.min.css" />
+		<link rel="stylesheet" type="text/css" href="stylesheets/font-awesome.min.css" />
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800|Archivo+Black|Cantarell:700' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet/less" type="text/css" href="css/bantp.less" />
+		<link rel="stylesheet" type="text/css" href="stylesheets/bantp.css" />
 
 		<!-- Now let's bring in all the awesomeness -->
 		<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
@@ -28,10 +28,6 @@
 		<script type="text/javascript" src="js/modules/bookmarks.js"></script>
 		<script type="text/javascript" src="js/modules/apps/app_manager.js"></script>
 		<script type="text/javascript" src="js/modules/apps/todo.js"></script>
-
-		<!-- Bring in Less.js and configure it to show errors -->
-		<script type="text/javascript">less = { env: 'development' };</script>
-		<script type="text/javascript" src="js/less-1.3.3.min.js"></script>
 
 		<link rel="shortcut icon" href="img/favicon.ico" />
 <script type="text/javascript">
